docs: 更新多模态RAG笔记本中的文本和说明
在笔记本中增加了中文标题和描述，详细解释了多模态RAG系统的工作原理和优势。更新了文档中使用的模型名称，并对处理文档和生成响应的内容进行了调整。详细说明了多模态RAG与文本-only RAG的比较分析，包括各自的优缺点和适用场景。

- 增加了中文标题“# 多模态RAG与图像字幕”
- 更新了系统介绍，增加了中文解释
- 更新了API请求中使用的模型名称为 "Pro/Qwen/Qwen2.5-VL-7B-Instruct" 和 "deepseek-ai/DeepSeek-V3"
- 更新了文档处理步骤的输出日志，调整了文本和图像处理的数量说明
- 重写了“=== Evaluating Query 1: What is the BLEU score of the Transformer (base model)? ===”部分的分析和结论，增加了对多模态RAG在特定查询中的表现分析
- 详细说明了多模态RAG和文本-only RAG的优缺点及其适用场景

--- a/15_多模态RAG.ipynb
+++ b/15_多模态RAG.ipynb
@@ -9,15 +9,22 @@
    },
    "source": [
     "# Multi-Modal RAG with Image Captioning\n",
+    "# 多模态RAG与图像字幕\n",
     "\n",
-    "In this notebook, I implement a Multi-Modal RAG system that extracts both text and images from documents, generates captions for images, and uses both content types to respond to queries. This approach enhances traditional RAG by incorporating visual information into the knowledge base.\n",
+    "In this notebook, I implement a Multi-Modal RAG system that extracts both text and images from documents, generates captions for images, and uses both content types to respond to queries. This approach enhances traditional RAG by incorporating visual information into the knowledge base.  \n",
+    "在此笔记本中，我实现了一个多模态RAG系统，该系统从文档中提取文本和图像，为图像生成字幕，并使用两种内容类型来回答查询。这种方法增强了传统的RAG，因为它将视觉信息纳入了知识库。\n",
     "\n",
-    "Traditional RAG systems only work with text, but many documents contain crucial information in images, charts, and tables. By captioning these visual elements and incorporating them into our retrieval system, we can:\n",
+    "Traditional RAG systems only work with text, but many documents contain crucial information in images, charts, and tables. By captioning these visual elements and incorporating them into our retrieval system, we can:  \n",
+    "传统的RAG系统只处理文本，但许多文档包含重要的信息，如图像、图表和表格。通过对这些视觉元素进行字幕并将它们纳入检索系统，我们可以：\n",
     "\n",
-    "- Access information locked in figures and diagrams\n",
-    "- Understand tables and charts that complement the text\n",
-    "- Create a more comprehensive knowledge base\n",
-    "- Answer questions that rely on visual data"
+    "- Access information locked in figures and diagrams  \n",
+    "- 获取锁定在图形和图表中的信息\n",
+    "- Understand tables and charts that complement the text  \n",
+    "- 理解补充文本的表格和图表\n",
+    "- Create a more comprehensive knowledge base  \n",
+    "- 创建一个更全面的知识库\n",
+    "- Answer questions that rely on visual data   \n",
+    "- 回答依赖于视觉数据的问题"
    ]
   },
   {
@@ -57,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +288,7 @@
     "        \n",
     "        # Create the API request to generate the caption\n",
     "        response = client.chat.completions.create(\n",
-    "            model=\"llava-hf/llava-1.5-7b-hf\", # Use the llava-1.5-7b model\n",
+    "            model=\"Pro/Qwen/Qwen2.5-VL-7B-Instruct\", # Use the llava-1.5-7b model\n",
     "            messages=[\n",
     "                {\n",
     "                    \"role\": \"system\",\n",
@@ -458,7 +465,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_embeddings(texts, model=\"BAAI/bge-en-icl\"):\n",
+    "def create_embeddings(texts, model=\"Qwen/Qwen3-Embedding-4B\"):\n",
     "    \"\"\"\n",
     "    Create embeddings for the given texts.\n",
     "    \n",
@@ -662,7 +669,7 @@
     "    \n",
     "    # Generate the response using the OpenAI API\n",
     "    response = client.chat.completions.create(\n",
-    "        model=\"meta-llama/Llama-3.2-3B-Instruct\",\n",
+    "        model=\"deepseek-ai/DeepSeek-V3\",\n",
     "        messages=[\n",
     "            {\"role\": \"system\", \"content\": system_message},\n",
     "            {\"role\": \"user\", \"content\": user_message}\n",
@@ -844,9 +851,9 @@
     "    Note any specific information that came from images in the multi-modal response.\n",
     "    \"\"\"\n",
     "\n",
-    "    # Generate comparison using meta-llama/Llama-3.2-3B-Instruct\n",
+    "    # Generate comparison using deepseek-ai/DeepSeek-V3\n",
     "    response = client.chat.completions.create(\n",
-    "        model=\"meta-llama/Llama-3.2-3B-Instruct\",\n",
+    "        model=\"deepseek-ai/DeepSeek-V3\",\n",
     "        messages=[\n",
     "            {\"role\": \"system\", \"content\": system_prompt},\n",
     "            {\"role\": \"user\", \"content\": user_prompt}\n",
@@ -899,9 +906,9 @@
     "    Please provide a comprehensive analysis of the relative strengths and weaknesses of multi-modal RAG \n",
     "    compared to text-only RAG, with specific attention to how image information contributed (or didn't contribute) to response quality.\"\"\"\n",
     "\n",
-    "    # Generate overall analysis using meta-llama/Llama-3.2-3B-Instruct\n",
+    "    # Generate overall analysis using deepseek-ai/DeepSeek-V3\n",
     "    response = client.chat.completions.create(\n",
-    "        model=\"meta-llama/Llama-3.2-3B-Instruct\",\n",
+    "        model=\"deepseek-ai/DeepSeek-V3\",\n",
     "        messages=[\n",
     "            {\"role\": \"system\", \"content\": system_prompt},\n",
     "            {\"role\": \"user\", \"content\": user_prompt}\n",
@@ -932,28 +939,22 @@
       "\n",
       "\n",
       "Processing document for multi-modal RAG...\n",
-      "Extracting content from data/attention_is_all_you_need.pdf...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Extracting content from data/attention_is_all_you_need.pdf...\n",
       "Extracted 15 text segments and 3 images\n",
-      "Created 59 text chunks\n",
+      "Created 56 text chunks\n",
       "Generating captions for 3 images...\n",
       "Processing image 1/3...\n",
       "Processing image 2/3...\n",
       "Processing image 3/3...\n",
       "Creating embeddings for all content...\n",
-      "Added 62 items to vector store (59 text chunks, 3 image captions)\n",
+      "Added 59 items to vector store (56 text chunks, 3 image captions)\n",
       "\n",
       "Processing document for text-only RAG...\n",
       "Extracting content from data/attention_is_all_you_need.pdf...\n",
       "Extracted 15 text segments and 3 images\n",
-      "Created 59 text chunks\n",
+      "Created 56 text chunks\n",
       "Creating embeddings for text-only content...\n",
-      "Added 59 text items to text-only vector store\n",
+      "Added 56 text items to text-only vector store\n",
       "\n",
       "\n",
       "=== Evaluating Query 1: What is the BLEU score of the Transformer (base model)? ===\n",
@@ -961,14 +962,15 @@
       "Running multi-modal RAG...\n",
       "\n",
       "=== Processing query: What is the BLEU score of the Transformer (base model)? ===\n",
-      "\n"
+      "\n",
+      "Retrieved 5 relevant items (5 text, 0 image captions)\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\faree\\AppData\\Local\\Temp\\ipykernel_14692\\2117883450.py:75: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "/var/folders/_j/2k9x06813sg300z_yf9bj74w0000gn/T/ipykernel_82107/2117883450.py:75: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  \"similarity\": float(score)  # Convert to float for JSON serialization\n"
      ]
     },
@@ -976,7 +978,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Retrieved 5 relevant items (5 text, 0 image captions)\n",
       "\n",
       "Running text-only RAG...\n",
       "\n",
@@ -986,41 +987,39 @@
       "\n",
       "=== OVERALL ANALYSIS ===\n",
       "\n",
-      "**Overall Analysis: Multi-Modal RAG vs Text-Only RAG**\n",
+      "### Comprehensive Analysis: Multi-modal RAG vs. Text-only RAG  \n",
       "\n",
-      "Our analysis compares the performance of multi-modal RAG (text + images) and text-only RAG across multiple test queries. We evaluate the strengths and weaknesses of each approach, focusing on the types of queries where multi-modal RAG outperforms text-only, the advantages of incorporating image information, and the limitations of the multi-modal approach.\n",
+      "#### **1. Types of Queries Where Multi-modal RAG Outperforms Text-only**  \n",
+      "In this specific test case (**BLEU score of the Transformer (base model)**), the multi-modal RAG did **not** outperform text-only RAG because:  \n",
+      "- The query was purely **text-based** (a factual NLP metric).  \n",
+      "- No relevant images or captions were retrieved, making the multi-modal aspect irrelevant.  \n",
       "\n",
-      "**Advantages of Multi-Modal RAG**\n",
+      "**Where Multi-modal RAG Excels:**  \n",
+      "- **Visual-dependent queries** (e.g., \"Describe the architecture of the Transformer model with diagrams.\")  \n",
+      "- **Multimodal explanations** (e.g., \"How does a convolutional layer work? Show an example.\")  \n",
+      "- **Comparative analysis** (e.g., \"Compare ResNet and VGG architectures with visual examples.\")  \n",
       "\n",
-      "1. **Improved Contextual Understanding**: Multi-modal RAG can leverage both text and image information to better understand the context of a query. This can lead to more accurate and informative responses, especially when the query requires a deeper understanding of the topic.\n",
-      "2. **Enhanced Visual Cues**: Images can provide visual cues that can help disambiguate ambiguous queries or provide additional context that is not explicitly stated in the text. For example, in Query 1, the image of the Transformer model could provide visual confirmation of the query, which was not present in the text-only response.\n",
-      "3. **Increased Retrieval Precision**: Multi-modal RAG can retrieve more relevant text chunks and image captions, leading to more accurate and precise responses. In Query 1, the multi-modal RAG retrieved 5 text chunks and 0 image captions, which may not have been sufficient to provide a clear answer.\n",
+      "#### **2. Advantages of Incorporating Image Information**  \n",
+      "When applicable, multi-modal RAG provides:  \n",
+      "- **Enhanced explanations** (e.g., diagrams, charts, or annotated images improve understanding).  \n",
+      "- **Better retrieval for hybrid queries** (e.g., \"Show me a Transformer model’s attention mechanism.\").  \n",
+      "- **Improved user engagement** (visual aids help comprehension for complex topics).  \n",
       "\n",
-      "**Disadvantages of Multi-Modal RAG**\n",
+      "#### **3. Disadvantages/Limitations of Multi-modal RAG**  \n",
+      "- **Irrelevant for text-only queries** (as seen here, images add no value for pure text facts).  \n",
+      "- **Higher computational cost** (processing images requires more resources).  \n",
+      "- **Potential noise** (irrelevant images may be retrieved if the system isn’t well-tuned).  \n",
       "\n",
-      "1. **Increased Complexity**: Multi-modal RAG requires more complex processing and retrieval mechanisms, which can increase the computational cost and make the system more difficult to train and deploy.\n",
-      "2. **Image Quality and Relevance**: The quality and relevance of the image captions can significantly impact the performance of the multi-modal RAG. Poor-quality or irrelevant images can lead to suboptimal responses.\n",
-      "3. **Overreliance on Image Information**: If the image information is not relevant or accurate, the multi-modal RAG may rely too heavily on it, leading to suboptimal responses.\n",
+      "#### **4. Overall Recommendation**  \n",
+      "- **Use text-only RAG** for:  \n",
+      "  - Fact-based, non-visual queries (e.g., metrics, definitions, text summaries).  \n",
+      "  - Low-latency or resource-constrained applications.  \n",
+      "- **Use multi-modal RAG** for:  \n",
+      "  - Queries requiring visual aids (e.g., diagrams, illustrations, comparisons).  \n",
+      "  - Educational or explanatory tasks where images enhance understanding.  \n",
       "\n",
-      "**Types of Queries where Multi-Modal RAG Outperforms Text-Only**\n",
-      "\n",
-      "1. **Visual-Spatial Queries**: Multi-modal RAG can perform better on visual-spatial queries that require a deeper understanding of the visual context, such as Query 1 (What is the BLEU score of the Transformer (base model)?).\n",
-      "2. **Ambiguous Queries**: Multi-modal RAG can help disambiguate ambiguous queries by leveraging both text and image information, leading to more accurate and informative responses.\n",
-      "3. **Multi-Modal Queries**: Multi-modal RAG can perform better on multi-modal queries that require the integration of both text and image information, such as Query 1.\n",
-      "\n",
-      "**Specific Advantages of Incorporating Image Information**\n",
-      "\n",
-      "1. **Visual Confirmation**: Images can provide visual confirmation of the query, which can help disambiguate ambiguous queries or provide additional context that is not explicitly stated in the text.\n",
-      "2. **Visual Cues**: Images can provide visual cues that can help the model understand the context of the query, leading to more accurate and informative responses.\n",
-      "3. **Multimodal Fusion**: Images can be fused with text information to provide a more comprehensive understanding of the query, leading to more accurate and informative responses.\n",
-      "\n",
-      "**Overall Recommendation**\n",
-      "\n",
-      "1. **Use Text-Only RAG for Simple Queries**: Text-only RAG is sufficient for simple queries that do not require a deep understanding of the context or visual information.\n",
-      "2. **Use Multi-Modal RAG for Complex Queries**: Multi-modal RAG is recommended for complex queries that require a deeper understanding of the context, visual information, or both.\n",
-      "3. **Use Multi-Modal RAG for Ambiguous Queries**: Multi-modal RAG can help disambiguate ambiguous queries by leveraging both text and image information, leading to more accurate and informative responses.\n",
-      "\n",
-      "In conclusion, multi-modal RAG can outperform text-only RAG in certain types of queries, particularly those that require a deeper understanding of the context, visual information, or both. However, the multi-modal approach also has its limitations, such as increased complexity and the potential for overreliance on image information. The choice of approach depends on the specific use case and the type of queries being addressed.\n"
+      "**Final Verdict:**  \n",
+      "For this test case, **text-only RAG was sufficient**, but multi-modal RAG would be superior in visually relevant scenarios. The choice depends on query type and use case.\n"
      ]
     }
    ],
@@ -1053,7 +1052,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv-new-specific-rag",
+   "display_name": "rag",
    "language": "python",
    "name": "python3"
   },
@@ -1067,7 +1066,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
