fix: 修复multi-modal RAG与text-only RAG评估函数中的错误
在评估函数中，修复了text-only RAG查询时调用错误的函数名。现在正确地调用了`query_text_only_rag`而不是`query_multimodal_rag`。

修复了文档中关于multi-modal RAG与text-only RAG的比较部分，更详细地说明了multi-modal RAG在不同场景下的优势和劣势，以及在只包含文本查询时的表现。

更新了文档中的测试案例分析，明确指出在当前情况下文本查询不需要图像信息，因此multi-modal RAG与text-only RAG的效果相同，并提供了未来测试的建议，以更好地评估multi-modal RAG的优势。

Closes #123

--- a/15_多模态RAG.ipynb
+++ b/15_多模态RAG.ipynb
@@ -733,6 +733,125 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def compare_responses(query, mm_response, text_response, reference=None):\n",
+    "    \"\"\"\n",
+    "    Compare multi-modal and text-only responses.\n",
+    "    \n",
+    "    Args:\n",
+    "        query (str): User query\n",
+    "        mm_response (str): Multi-modal response\n",
+    "        text_response (str): Text-only response\n",
+    "        reference (str, optional): Reference answer\n",
+    "        \n",
+    "    Returns:\n",
+    "        str: Comparison analysis\n",
+    "    \"\"\"\n",
+    "    # System prompt for the evaluator\n",
+    "    system_prompt = \"\"\"You are an expert evaluator comparing two RAG systems:\n",
+    "    1. Multi-modal RAG: Retrieves from both text and image captions\n",
+    "    2. Text-only RAG: Retrieves only from text\n",
+    "\n",
+    "    Evaluate which response better answers the query based on:\n",
+    "    - Accuracy and correctness\n",
+    "    - Completeness of information\n",
+    "    - Relevance to the query\n",
+    "    - Unique information from visual elements (for multi-modal)\"\"\"\n",
+    "\n",
+    "    # User prompt with query and responses\n",
+    "    user_prompt = f\"\"\"Query: {query}\n",
+    "\n",
+    "    Multi-modal RAG Response:\n",
+    "    {mm_response}\n",
+    "\n",
+    "    Text-only RAG Response:\n",
+    "    {text_response}\n",
+    "    \"\"\"\n",
+    "\n",
+    "    if reference:\n",
+    "        user_prompt += f\"\"\"\n",
+    "    Reference Answer:\n",
+    "    {reference}\n",
+    "    \"\"\"\n",
+    "\n",
+    "        user_prompt += \"\"\"\n",
+    "    Compare these responses and explain which one better answers the query and why.\n",
+    "    Note any specific information that came from images in the multi-modal response.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Generate comparison using deepseek-ai/DeepSeek-V3\n",
+    "    response = client.chat.completions.create(\n",
+    "        model=\"deepseek-ai/DeepSeek-V3\",\n",
+    "        messages=[\n",
+    "            {\"role\": \"system\", \"content\": system_prompt},\n",
+    "            {\"role\": \"user\", \"content\": user_prompt}\n",
+    "        ],\n",
+    "        temperature=0\n",
+    "    )\n",
+    "    \n",
+    "    return response.choices[0].message.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_overall_analysis(results):\n",
+    "    \"\"\"\n",
+    "    Generate an overall analysis of multi-modal vs text-only RAG.\n",
+    "    \n",
+    "    Args:\n",
+    "        results (List[Dict]): Evaluation results for each query\n",
+    "        \n",
+    "    Returns:\n",
+    "        str: Overall analysis\n",
+    "    \"\"\"\n",
+    "    # System prompt for the evaluator\n",
+    "    system_prompt = \"\"\"You are an expert evaluator of RAG systems. Provide an overall analysis comparing \n",
+    "    multi-modal RAG (text + images) versus text-only RAG based on multiple test queries.\n",
+    "\n",
+    "    Focus on:\n",
+    "    1. Types of queries where multi-modal RAG outperforms text-only\n",
+    "    2. Specific advantages of incorporating image information\n",
+    "    3. Any disadvantages or limitations of the multi-modal approach\n",
+    "    4. Overall recommendation on when to use each approach\"\"\"\n",
+    "\n",
+    "    # Create summary of evaluations\n",
+    "    evaluations_summary = \"\"\n",
+    "    for i, result in enumerate(results):\n",
+    "        evaluations_summary += f\"Query {i+1}: {result['query']}\\n\"\n",
+    "        evaluations_summary += f\"Multi-modal retrieved {result['multimodal_results']['text_count']} text chunks and {result['multimodal_results']['image_count']} image captions\\n\"\n",
+    "        evaluations_summary += f\"Comparison summary: {result['comparison'][:200]}...\\n\\n\"\n",
+    "\n",
+    "    # User prompt with evaluations summary\n",
+    "    user_prompt = f\"\"\"Based on the following evaluations of multi-modal vs text-only RAG across {len(results)} queries, \n",
+    "    provide an overall analysis comparing these two approaches:\n",
+    "\n",
+    "    {evaluations_summary}\n",
+    "\n",
+    "    Please provide a comprehensive analysis of the relative strengths and weaknesses of multi-modal RAG \n",
+    "    compared to text-only RAG, with specific attention to how image information contributed (or didn't contribute) to response quality.\"\"\"\n",
+    "\n",
+    "    # Generate overall analysis using deepseek-ai/DeepSeek-V3\n",
+    "    response = client.chat.completions.create(\n",
+    "        model=\"deepseek-ai/DeepSeek-V3\",\n",
+    "        messages=[\n",
+    "            {\"role\": \"system\", \"content\": system_prompt},\n",
+    "            {\"role\": \"user\", \"content\": user_prompt}\n",
+    "        ],\n",
+    "        temperature=0\n",
+    "    )\n",
+    "    \n",
+    "    return response.choices[0].message.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def evaluate_multimodal_vs_textonly(pdf_path, test_queries, reference_answers=None):\n",
     "    \"\"\"\n",
     "    Compare multi-modal RAG with text-only RAG.\n",
@@ -801,125 +920,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def compare_responses(query, mm_response, text_response, reference=None):\n",
-    "    \"\"\"\n",
-    "    Compare multi-modal and text-only responses.\n",
-    "    \n",
-    "    Args:\n",
-    "        query (str): User query\n",
-    "        mm_response (str): Multi-modal response\n",
-    "        text_response (str): Text-only response\n",
-    "        reference (str, optional): Reference answer\n",
-    "        \n",
-    "    Returns:\n",
-    "        str: Comparison analysis\n",
-    "    \"\"\"\n",
-    "    # System prompt for the evaluator\n",
-    "    system_prompt = \"\"\"You are an expert evaluator comparing two RAG systems:\n",
-    "    1. Multi-modal RAG: Retrieves from both text and image captions\n",
-    "    2. Text-only RAG: Retrieves only from text\n",
-    "\n",
-    "    Evaluate which response better answers the query based on:\n",
-    "    - Accuracy and correctness\n",
-    "    - Completeness of information\n",
-    "    - Relevance to the query\n",
-    "    - Unique information from visual elements (for multi-modal)\"\"\"\n",
-    "\n",
-    "    # User prompt with query and responses\n",
-    "    user_prompt = f\"\"\"Query: {query}\n",
-    "\n",
-    "    Multi-modal RAG Response:\n",
-    "    {mm_response}\n",
-    "\n",
-    "    Text-only RAG Response:\n",
-    "    {text_response}\n",
-    "    \"\"\"\n",
-    "\n",
-    "    if reference:\n",
-    "        user_prompt += f\"\"\"\n",
-    "    Reference Answer:\n",
-    "    {reference}\n",
-    "    \"\"\"\n",
-    "\n",
-    "        user_prompt += \"\"\"\n",
-    "    Compare these responses and explain which one better answers the query and why.\n",
-    "    Note any specific information that came from images in the multi-modal response.\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # Generate comparison using deepseek-ai/DeepSeek-V3\n",
-    "    response = client.chat.completions.create(\n",
-    "        model=\"deepseek-ai/DeepSeek-V3\",\n",
-    "        messages=[\n",
-    "            {\"role\": \"system\", \"content\": system_prompt},\n",
-    "            {\"role\": \"user\", \"content\": user_prompt}\n",
-    "        ],\n",
-    "        temperature=0\n",
-    "    )\n",
-    "    \n",
-    "    return response.choices[0].message.content"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def generate_overall_analysis(results):\n",
-    "    \"\"\"\n",
-    "    Generate an overall analysis of multi-modal vs text-only RAG.\n",
-    "    \n",
-    "    Args:\n",
-    "        results (List[Dict]): Evaluation results for each query\n",
-    "        \n",
-    "    Returns:\n",
-    "        str: Overall analysis\n",
-    "    \"\"\"\n",
-    "    # System prompt for the evaluator\n",
-    "    system_prompt = \"\"\"You are an expert evaluator of RAG systems. Provide an overall analysis comparing \n",
-    "    multi-modal RAG (text + images) versus text-only RAG based on multiple test queries.\n",
-    "\n",
-    "    Focus on:\n",
-    "    1. Types of queries where multi-modal RAG outperforms text-only\n",
-    "    2. Specific advantages of incorporating image information\n",
-    "    3. Any disadvantages or limitations of the multi-modal approach\n",
-    "    4. Overall recommendation on when to use each approach\"\"\"\n",
-    "\n",
-    "    # Create summary of evaluations\n",
-    "    evaluations_summary = \"\"\n",
-    "    for i, result in enumerate(results):\n",
-    "        evaluations_summary += f\"Query {i+1}: {result['query']}\\n\"\n",
-    "        evaluations_summary += f\"Multi-modal retrieved {result['multimodal_results']['text_count']} text chunks and {result['multimodal_results']['image_count']} image captions\\n\"\n",
-    "        evaluations_summary += f\"Comparison summary: {result['comparison'][:200]}...\\n\\n\"\n",
-    "\n",
-    "    # User prompt with evaluations summary\n",
-    "    user_prompt = f\"\"\"Based on the following evaluations of multi-modal vs text-only RAG across {len(results)} queries, \n",
-    "    provide an overall analysis comparing these two approaches:\n",
-    "\n",
-    "    {evaluations_summary}\n",
-    "\n",
-    "    Please provide a comprehensive analysis of the relative strengths and weaknesses of multi-modal RAG \n",
-    "    compared to text-only RAG, with specific attention to how image information contributed (or didn't contribute) to response quality.\"\"\"\n",
-    "\n",
-    "    # Generate overall analysis using deepseek-ai/DeepSeek-V3\n",
-    "    response = client.chat.completions.create(\n",
-    "        model=\"deepseek-ai/DeepSeek-V3\",\n",
-    "        messages=[\n",
-    "            {\"role\": \"system\", \"content\": system_prompt},\n",
-    "            {\"role\": \"user\", \"content\": user_prompt}\n",
-    "        ],\n",
-    "        temperature=0\n",
-    "    )\n",
-    "    \n",
-    "    return response.choices[0].message.content"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -970,7 +970,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/_j/2k9x06813sg300z_yf9bj74w0000gn/T/ipykernel_82107/2117883450.py:75: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "/var/folders/_j/2k9x06813sg300z_yf9bj74w0000gn/T/ipykernel_28250/2117883450.py:75: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  \"similarity\": float(score)  # Convert to float for JSON serialization\n"
      ]
     },
@@ -991,35 +991,44 @@
       "\n",
       "#### **1. Types of Queries Where Multi-modal RAG Outperforms Text-only**  \n",
       "In this specific test case (**BLEU score of the Transformer (base model)**), the multi-modal RAG did **not** outperform text-only RAG because:  \n",
-      "- The query was purely **text-based** (a factual NLP metric).  \n",
-      "- No relevant images or captions were retrieved, making the multi-modal aspect irrelevant.  \n",
+      "- The query was purely **text-based** and required **factual retrieval** (numerical scores from a research paper).  \n",
+      "- No relevant images or image captions were retrieved, meaning the multi-modal system functioned identically to text-only RAG.  \n",
       "\n",
-      "**Where Multi-modal RAG Excels:**  \n",
+      "**Where Multi-modal RAG Would Excel:**  \n",
       "- **Visual-dependent queries** (e.g., \"Describe the architecture of the Transformer model with diagrams.\")  \n",
-      "- **Multimodal explanations** (e.g., \"How does a convolutional layer work? Show an example.\")  \n",
-      "- **Comparative analysis** (e.g., \"Compare ResNet and VGG architectures with visual examples.\")  \n",
+      "- **Multimedia explanations** (e.g., \"How does attention work in Transformers? Show an example.\")  \n",
+      "- **Comparative analysis** (e.g., \"Compare the BLEU scores of different models with their computational graphs.\")  \n",
+      "\n",
+      "---\n",
       "\n",
       "#### **2. Advantages of Incorporating Image Information**  \n",
-      "When applicable, multi-modal RAG provides:  \n",
-      "- **Enhanced explanations** (e.g., diagrams, charts, or annotated images improve understanding).  \n",
-      "- **Better retrieval for hybrid queries** (e.g., \"Show me a Transformer model’s attention mechanism.\").  \n",
-      "- **Improved user engagement** (visual aids help comprehension for complex topics).  \n",
+      "While not applicable in this query, multi-modal RAG provides key benefits in other scenarios:  \n",
+      "- **Enhanced Explanations**: Diagrams, charts, or annotated images can clarify complex concepts (e.g., attention mechanisms).  \n",
+      "- **Improved Retrieval for Visual Queries**: If the query references an image (e.g., \"Explain this graph from the Transformer paper\"), multi-modal RAG can fetch and interpret it.  \n",
+      "- **Better Contextual Understanding**: Some research papers include tables/figures that summarize key results—multi-modal RAG can leverage these.  \n",
+      "\n",
+      "---\n",
       "\n",
       "#### **3. Disadvantages/Limitations of Multi-modal RAG**  \n",
-      "- **Irrelevant for text-only queries** (as seen here, images add no value for pure text facts).  \n",
-      "- **Higher computational cost** (processing images requires more resources).  \n",
-      "- **Potential noise** (irrelevant images may be retrieved if the system isn’t well-tuned).  \n",
+      "- **Irrelevant Image Retrieval**: If no useful images exist (as in this case), the system adds no value over text-only.  \n",
+      "- **Computational Overhead**: Processing images requires more resources than text-only retrieval.  \n",
+      "- **Noise from Poor Captions**: If image captions are inaccurate or irrelevant, they may mislead the response.  \n",
       "\n",
-      "#### **4. Overall Recommendation**  \n",
-      "- **Use text-only RAG** for:  \n",
-      "  - Fact-based, non-visual queries (e.g., metrics, definitions, text summaries).  \n",
-      "  - Low-latency or resource-constrained applications.  \n",
-      "- **Use multi-modal RAG** for:  \n",
-      "  - Queries requiring visual aids (e.g., diagrams, illustrations, comparisons).  \n",
-      "  - Educational or explanatory tasks where images enhance understanding.  \n",
+      "---\n",
       "\n",
-      "**Final Verdict:**  \n",
-      "For this test case, **text-only RAG was sufficient**, but multi-modal RAG would be superior in visually relevant scenarios. The choice depends on query type and use case.\n"
+      "#### **4. Overall Recommendations**  \n",
+      "| **Use Multi-modal RAG When:** | **Use Text-only RAG When:** |  \n",
+      "|-------------------------------|----------------------------|  \n",
+      "| Queries require visual aids (diagrams, charts, etc.) | Queries are purely text-based (e.g., scores, definitions) |  \n",
+      "| The dataset includes useful images/captions | The dataset lacks relevant images |  \n",
+      "| Explainability benefits from visuals | Speed and simplicity are prioritized |  \n",
+      "\n",
+      "**Final Verdict for This Test Case:**  \n",
+      "- Since the query was purely textual and no images were retrieved, **text-only RAG was equally effective**.  \n",
+      "- Multi-modal RAG would only be superior if the answer required supplemental visuals (e.g., \"Show the attention weights in a Transformer\").  \n",
+      "\n",
+      "**Future Testing Suggestion:**  \n",
+      "- Include **mixed-modality queries** (e.g., \"Explain the Transformer architecture with diagrams\") to better assess multi-modal RAG’s advantages.\n"
      ]
     }
    ],
